--- a/src/components/cooperation/_map.pug
+++ b/src/components/cooperation/_map.pug
@@ -17,6 +17,11 @@
             .map__tooltip-image
               img(src='img/metro.png' srcset='img/metro@2x.png 2x')
             p Метро
+          // .map__tooltip-row - БЛОК КОТОРЫЙ МОЖНО ДОБАВЛЯТЬ В ЛЮБОЙ ИЗ ГОРОДОВ, ИЗМЕНИТЬ В ТЕГЕ <p> НАЗВАНИЕ А В <img src=''> ИЗОБРАЖЕНИЕ
+          .map__tooltip-row
+            .map__tooltip-image
+              img(src='img/metro.png' srcset='img/metro@2x.png 2x')
+            p Магазин
 
         .map__tooltip#s_sheme__moscow
           .map__tooltip-title Москва
