--- a/src/components/history/_history.sass
+++ b/src/components/history/_history.sass
@@ -103,8 +103,6 @@
     padding: 24px 0 35px
 
 
-
-
 +r($xl)
   .history
 
@@ -179,6 +177,24 @@
         width: 114%
 
     &__bg
+      display: none
+
+
+.section-white
+  background: #fff
+  padding-top: 10px
+  padding-bottom: 50px
+  padding-bottom: 25px
+  .history__row
+    margin-bottom: 0
+
++r($md)
+  .section-white
+    background: none
+    padding-top: 0
+    .history__row
+      margin-bottom: 0
+    .history__description
       display: none
 
 
