--- a/src/components/history/_history.sass
+++ b/src/components/history/_history.sass
@@ -184,7 +184,6 @@
   background: #fff
   padding-top: 10px
   padding-bottom: 50px
-  padding-bottom: 25px
   .history__row
     margin-bottom: 0
 
@@ -192,6 +191,7 @@
   .section-white
     background: none
     padding-top: 0
+    padding-bottom: 0
     .history__row
       margin-bottom: 0
     .history__description
