--- a/src/sass/utilities/_variables.sass
+++ b/src/sass/utilities/_variables.sass
@@ -14,7 +14,7 @@ $systemFont: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helveti
 // COLORS
 $fontColor: #202020
 $fontColor50: rgba($fontColor, .5)
-$colorPrimary: #A01E25
+$colorPrimary: #0BA14B
 $colorGreen: #4ab68f
 $colorRed: #f45b63
 $colorRedHover: lighten($colorRed, 15%)
