update css/js in sources

--- a/src/components/brands/_brands.sass
+++ b/src/components/brands/_brands.sass
@@ -42,6 +42,9 @@
     max-width: $col6
     display: flex
     flex-direction: column
+    &.no-animations .brand-card:hover
+      transform: translateY(-0px)
+      
   .btn
     // display: none
     max-width: 163px
