--- a/src/components/cooperation/_map.sass
+++ b/src/components/cooperation/_map.sass
@@ -17,7 +17,7 @@
       z-index: 1
       transition: all .15s $ease
       &:hover
-        fill: rgba($colorPrimary, 0.6)
+        // fill: rgba($colorPrimary, 0.6)
       &.fill-fff
         fill: #fff !important
     circle
