--- a/src/components/separator/_separator.sass
+++ b/src/components/separator/_separator.sass
@@ -16,7 +16,8 @@
     transform-origin: center bottom
     transition: transform .25s $ease
     img
-      max-width: 100%
+      // max-width: 100%
+      max-width: 290px
 
   &__title
     padding: 24px 0 24px 220px
