--- a/src/components/today/_today.sass
+++ b/src/components/today/_today.sass
@@ -54,7 +54,7 @@
     border-bottom: 1px solid #E0E0E0
     padding-bottom: 15px
     width: calc(20% - 20px)
-    white-space: nowrap
+    // white-space: nowrap
 
   &__item-pre-title
     color: #828282
@@ -117,7 +117,7 @@
   .today
     padding-top: 145px
     &__image
-      display: none
+      // display: none
     &__pre-title
       font-size: 16px
       line-height: 21px
@@ -157,6 +157,9 @@
     padding-top: 165px
     &__info
       width: 60%
+      padding-right: 10px
+    &__image
+      width: 40%
     &__title
       font-size: 20px
       line-height: 26px
@@ -186,6 +189,12 @@
     padding-top: 160px
     &__info
       width: 100%
+      padding-right: 0px
+    &__grid
+      display: block
+    &__image
+      width: 100%
+      margin-bottom: 20px
     &__pre-title
       font-size: 14px
       line-height: 18px
