transfer markup, map works

--- a/src/components/brands/_brands.pug
+++ b/src/components/brands/_brands.pug
@@ -8,14 +8,14 @@
     .container
       .brands__title(data-aos="fade-up") Наши бренды
       .brands__wrapper
-        .brands__col(data-aos="fade-up")
+        .brands__col.no-animation(data-aos="fade-up")
           .brand-card(js-hover-polimer)
             .brand-card__image
               +svgMono('brandCard_1')
             .brand-card__description На предприятии внедрена технология двухкомпонентного литья, на изделия наносятся рисунки с помощью новейшей технологии “In-mould”.
             a.btn.btn-primary(href="#") Перейти на сайт
 
-        .brands__col(data-aos="fade-up")
+        .brands__col.no-animation(data-aos="fade-up")
           .brand-card(js-hover-forma)
             .brand-card__image.brand-card__image--color
               +svgColor('brandCard_2')
