--- a/src/components/cooperation/_info.pug
+++ b/src/components/cooperation/_info.pug
@@ -1,71 +1,98 @@
 // COOPERATION INFO
 .cooperation
   .container.container--team
-    p.cooperation__text(data-aos="fade-up") При всем масштабе своего производства компания имеет большую гибкость в части обеспечения поставок клиентам, не прекращает искать новые идеи и постоянно расширяет свой ассортимент.
+    p.cooperation__text(data-aos="fade-up")
+      | Быть гибкими, постоянно искать новые идеи и предлагать сегодня больше, чем вчера – принципы, на которых мы строим отношения со своими партнерами.
+    .today__coop
+      p.today__section(data-aos="fade-up") Сегодня мы
+      .today__row
+        .today__item(data-aos="fade-up" data-aos-delay="100")
+          p.today__item-pre-title Используем более
+          p.today__item-title 9.194
+          p.today__item-sub-title тонн сырья в год
+        .today__item(data-aos="fade-up" data-aos-delay="200")
+          p.today__item-pre-title Производим более
+          p.today__item-title 66.055.557
+          p.today__item-sub-title изделий в год
+        .today__item(data-aos="fade-up" data-aos-delay="300")
+          p.today__item-pre-title Выполняем более
+          p.today__item-title 28.798
+          p.today__item-sub-title отгрузок в год
+        .today__item(data-aos="fade-up" data-aos-delay="400")
+          p.today__item-pre-title Работаем
+          p.today__item-title 8760
+          p.today__item-sub-title часов в год
+        .today__item(data-aos="fade-up" data-aos-delay="600")
+          p.today__item-pre-title Проезжаем более
+          p.today__item-title 37.000
+          p.today__item-sub-title км в год
     .cooperation__row
       .cooperation__info(data-aos="fade-up")
         .cooperation__icon
-          +svgColor('icon-assort')
+          +svgColor('prod-1')
         p.cooperation__info-title Широкий ассортимент продукции.
-        p.cooperation__info-main Ассортиментная матрица Полимербыта насчитывает
+        p.cooperation__info-main
+          | Ассортиментная матрица Полимербыта насчитывает
           span  более 700 артикулов в Перманентном ассортименте
           | , состоящем из самых востребованных рынком и потребителями изделий. Основные характеристики ассортимента:
-          span  строгий контроль качества, регулярная актуализация внешнего вида изделий для соответствия текущим вкусам потребителей
+          span
+            | строгий контроль качества, регулярная актуализация внешнего вида изделий для соответствия текущим вкусам потребителей
           | , неснижаемый складской запас для бесперебойных регулярных отгрузок.
       .cooperation__image(data-aos="fade-up")
-        //- img(js-lazy data-src='img/cooperationImg1.jpg' data-srcset='img/cooperationImg1@2x.jpg 2x')
         .cooperation__video
-          video(muted loop autoplay poster="img/heroBackground_1.jpg")
-            source(src="video/prod1.mp4" type="video/mp4")
-            source(src="video/prod1.webm" type="video/webm")
+          video(muted="" loop="" autoplay="" poster="http://www.polimerbyt.ru//upload/iblock/59e/59e51296d810092480f76894eb577aad.jpg")
+            source(src="http://www.polimerbyt.ru//upload/video/prod1.mp4" type="video/mp4")
+            source(src="http://www.polimerbyt.ru//upload/video/prod1.webm" type="video/webm")
+          img.mobile-poster(src="http://www.polimerbyt.ru//upload/iblock/59e/59e51296d810092480f76894eb577aad.jpg")
     .cooperation__row.cooperation__row--reverse
       .cooperation__info(data-aos="fade-up")
         .cooperation__icon
-          +svgColor('icon-high')
+          +svgColor('prod-2')
         p.cooperation__info-title Высокий технологический уровень и качество продукции.
-        p.cooperation__info-main Наличие современной инфраструктуры,
+        p.cooperation__info-main
+          | Наличие современной инфраструктуры,
           span  высокая оснащенность новейшим оборудованием и пресс-формами
           |  позволяет достигать необходимого уровня качества продукции и применять полный
           span  набор разнообразных технологий изготовления изделий из пластмассы
           |  (в том числе, двухкомпонентное литье, литье изделий сложной конфигурации, нанесение рисунков на изделия).
       .cooperation__image(data-aos="fade-up")
-        //- img(js-lazy data-src='img/cooperationImg2.jpg' data-srcset='img/cooperationImg2@2x.jpg 2x')
         .cooperation__video
-          video(muted loop autoplay poster="img/heroBackground_1.jpg")
-            source(src="video/prod1.mp4" type="video/mp4")
-            source(src="video/prod1.webm" type="video/webm")
-
+          video(muted="" loop="" autoplay="" poster="http://www.polimerbyt.ru//upload/iblock/714/714ba32c7099eb9b1623454eae57c9ff.jpg")
+            source(src="http://www.polimerbyt.ru//upload/video/video2_(1).mp4" type="video/mp4")
+            source(src="http://www.polimerbyt.ru//upload/video/video2.webm" type="video/webm")
+          img.mobile-poster(src="http://www.polimerbyt.ru//upload/iblock/714/714ba32c7099eb9b1623454eae57c9ff.jpg")
 .cooperation__advantages
   .container.container--team
     .cooperation__grid
-      .cooperation__advantage(data-aos="fade-up" data-aos-delay="50")
-        .cooperation__advantage-icon
-          +svgColor('icon-optimization')
-        p.cooperation__advantage-title Оптимизация издержек и привлекательность цен.
-        p.cooperation__advantage-main Один из самых низких в отрасли уровень издержек, обеспечиваемый современным оборудованием, отлаженными бизнес-процессами и масштабностью производства позволяет Полимербыту предлагать товар покупателям по наиболее выгодным для них ценам.
       .cooperation__advantage(data-aos="fade-up" data-aos-delay="100")
         .cooperation__advantage-icon
-          +svgColor('icon-dist')
-        p.cooperation__advantage-title Способность выполнять требования дистрибуторов и розничных сетей.
-        p.cooperation__advantage-main Для дистрибуторов и розничных сетей критически важно наличие ассортимента на складе и полная комплектация заказов в сжатые сроки, иногда, в течение 2-3 дней.
-      .cooperation__advantage(data-aos="fade-up" data-aos-delay="150")
+          +svgColor('prod-3')
+        p.cooperation__advantage-title Оптимизация издержек и привлекательность цен.
+        p.cooperation__advantage-main
+          | Один из самых низких в отрасли уровень издержек, обеспечиваемый современным оборудованием, отлаженными бизнес-процессами и масштабностью производства позволяет Полимербыту предлагать товар покупателям по наиболее выгодным для них ценам.
+      .cooperation__advantage(data-aos="fade-up" data-aos-delay="100")
         .cooperation__advantage-icon
-          +svgColor('icon-points')
+          +svgColor('prod-4')
+        p.cooperation__advantage-title Способность выполнять требования дистрибуторов и розничных сетей.
+        p.cooperation__advantage-main
+          | Для дистрибуторов и розничных сетей критически важно наличие ассортимента на складе и полная комплектация заказов в сжатые сроки, иногда, в течение 2-3 дней.
+      .cooperation__advantage(data-aos="fade-up" data-aos-delay="100")
+        .cooperation__advantage-icon
+          +svgColor('prod-5')
         p.cooperation__advantage-title Расположение производства вблизи от основных рынков сбыта.
-        p.cooperation__advantage-main Производственные и складские мощности компании расположены в г. Москва и, тем самым, максимально приближены к основным рынкам сбыта, находящимся в Европейской части России.
-
+        p.cooperation__advantage-main
+          | Производственные и складские мощности компании расположены в г. Москва и, тем самым, максимально приближены к основным рынкам сбыта,находящимся в Европейской части России.
     .cooperation__separator(data-aos="fade-up")
     .cooperation__conditions(data-aos="fade-up")
-      a.nav-link(href="#yur-popup" js-popup)
+      a.nav-link(href="#yur-popup" js-popup="")
         .nav-link__content
           .nav-link__title Условия сотрудничества
           .nav-link__name Для юридических лиц
         .nav-link__icon
           +svgMono('arrow-right')
-      a.nav-link(href="#ip-popup" js-popup)
+      a.nav-link(href="#ip-popup" js-popup="")
         .nav-link__content
           .nav-link__title Условия сотрудничества
           .nav-link__name Для индивидуальных предпринимателей
         .nav-link__icon
           +svgMono('arrow-right')
-
