--- a/src/components/homepage/_products.sass
+++ b/src/components/homepage/_products.sass
@@ -64,7 +64,7 @@
 body:not(.is-mobile) .product__content:hover
   .product__plus .ico
     transform: rotate(45deg)
-  .product__plus
+  .product__dropdown
     opacity: 1
     transform: translate3d(0,0,0)
     pointer-events: all
