--- a/src/components/hero/_production.pug
+++ b/src/components/hero/_production.pug
@@ -1,10 +1,11 @@
 // HERO
 .hero.hero--with-overlay
   .hero__background(data-aos="blur")
-    video(muted loop autoplay poster="img/heroBackground_1.jpg")
-      source(src="video/prod1.mp4" type="video/mp4")
-      source(src="video/prod1.webm" type="video/webm")
-    //- img(src='img/heroBackground_1.jpg' srcset='img/heroBackground_1@2x.jpg 2x')
+    video(muted="muted" loop="" autoplay="autoplay" poster="http://www.polimerbyt.ru/local/templates/polimerbyt/img/heroBackground_1.jpg")
+      source(src="http://www.polimerbyt.ru/local/templates/polimerbyt/include/production/prod1.mp4" type="video/mp4")
+      source(src="http://www.polimerbyt.ru/local/templates/polimerbyt/include/production/prod1.webm" type="video/webm")
+    img.mobile-poster(src="http://www.polimerbyt.ru/local/templates/polimerbyt/img/heroBackground_1.jpg")
+
   .hero__content(data-aos="fade-up")
     .container.container--team
       .hero__subtitle.hero__subtitle--edit Наше производство
