--- a/src/components/homepage/_homepage.pug
+++ b/src/components/homepage/_homepage.pug
@@ -25,7 +25,7 @@
             .product__content
               .product__plus
                 +svgMono('plus')
-              .product__dropdown
+              a(href="#").product__dropdown
                 .product__dropdown-wrapper
                   .product__article Артикул: 35601
                   .product__dropdown-image
@@ -39,7 +39,7 @@
             .product__content
               .product__plus
                 +svgMono('plus')
-              .product__dropdown
+              a(href="#").product__dropdown
                 .product__dropdown-wrapper
                   .product__article Артикул: 35601
                   .product__dropdown-image
@@ -64,7 +64,7 @@
             .product__content
               .product__plus
                 +svgMono('plus')
-              .product__dropdown.product__dropdown--reverse
+              a(href="#").product__dropdown.product__dropdown--reverse
                 .product__dropdown-wrapper
                   .product__article Артикул: 35601
                   .product__dropdown-image
@@ -88,7 +88,7 @@
             .product__content
               .product__plus
                 +svgMono('plus')
-              .product__dropdown
+              a(href="#").product__dropdown
                 .product__dropdown-wrapper
                   .product__article Артикул: 35601
                   .product__dropdown-image
