--- a/src/components/production/_graph.sass
+++ b/src/components/production/_graph.sass
@@ -32,7 +32,7 @@
       content: ''
       left: 2px
       top: -3px
-      background: #D0021B
+      background: $colorPrimary
     p
       font-size: 18px
       line-height: 28px
